<resources>
    <string name="app_name">EPFuel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EPFuel - Twój dziennik tankowania</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_add_refuel">Add new refuel</string>
    <string name="title_activity_add_car">Add new car</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_edit_car">Edit car</string>
    <string name="title_activity_edit_refuel">EditRefuelActivity</string>
    <string name="name">Name</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="description">Description</string>
    <string name="fuel_type">Fuel type</string>
    <string name="two_tanks">Two tanks</string>
    <string name="choose_photo">Choose photo</string>
    <string name="counter">Counter</string>
    <string name="price_for_liter">Price for liter</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="petrol_station">PETROL_STATION</string>
    <string name="none">None</string>
    <string name="choose">Choose</string>
    <string name="loading">Loading</string>
    <string name="in_current_month">In current month</string>
    <string name="spent_on_fuel">Spent on fuel</string>
    <string name="refueled">Refueled</string>
    <string name="in_previous_month">In previous month</string>
    <string name="fuel">Fuel</string>
    <string name="recent_refuels">Recent refuels</string>
    <string name="summary">Summary</string>
    <string name="avg_consumption">Average consumption</string>
    <string name="last_consumption">Last consumption</string>
    <string name="last_price">Last fuel price</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="refuel_list">Refuel list</string>
    <string name="cars">Cars</string>
    <string name="not_enough_records">Not enough records</string>
    <string name="no_records">No records</string>
</resources>
