<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@+id/add_refuel_gas_station_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/add_refuel_basic_container"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <TextView
            android:id="@+id/add_refuel_gas_station_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/petrol_station" />

        <!--<Switch-->
        <!--android:id="@+id/add_refuel_gas_station_switch"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true" />-->

        <TextView
            android:id="@+id/add_refuel_gas_station_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_refuel_gas_station_header"
            android:text="@string/none" />

        <Button
            android:id="@+id/add_refuel_gas_station_location_choose_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/choose"
            android:layout_below="@id/add_refuel_gas_station_location"
            android:background="@android:color/transparent"
            android:onClick="chooseLocation"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</android.support.v7.widget.CardView>