<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Spinner
            android:id="@+id/vehicle_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_bg" />

        <TextView
            android:id="@+id/main_content_fuel_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vehicle_spinner"
            android:theme="@style/AboveCardHeader"
            android:layout_marginTop="4dp"
            android:text="@string/fuel" />

        <include layout="@layout/content_main_fuel_card" />

        <TextView
            android:id="@+id/main_content_last_refuels_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_content_fuel_container"
            android:theme="@style/AboveCardHeader"
            android:layout_marginTop="4dp"
            android:text="@string/recent_refuels" />

        <include layout="@layout/content_main_recent_refuels_card" />

        <TextView
            android:id="@+id/main_content_summary_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_content_last_refuels_container"
            android:theme="@style/AboveCardHeader"
            android:layout_marginTop="4dp"
            android:text="@string/summary" />

        <include layout="@layout/content_main_summary_card" />


    </RelativeLayout>
</ScrollView>