<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@+id/add_refuel_basic_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/vehicle_spinner"
    android:layout_margin="10dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <TextView
            android:id="@+id/add_refuel_counter_label"
            android:layout_column="0"
            android:text="@string/counter"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_columnWeight="1" />

        <EditText
            android:id="@+id/add_refuel_counter_value"
            android:layout_column="1"
            android:hint="0 km"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnWeight="1"
            android:inputType="numberSigned" />

        <Spinner
            android:id="@+id/add_refuel_fuel_type"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnWeight="3" />

        <EditText
            android:id="@+id/add_refuel_fueled_value"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnWeight="1"
            android:hint="0.00 l"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/add_refuel_price_for_liter_label"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnWeight="3"
            android:layout_marginLeft="6dp"
            android:text="@string/price_for_liter" />

        <EditText
            android:id="@+id/add_refuel_price_for_liter_value"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:hint="0.00 zł/l"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/add_refuel_price_label"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnWeight="3"
            android:layout_marginLeft="6dp"

            android:text="@string/price" />

        <EditText
            android:id="@+id/add_refuel_price_value"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnWeight="1"
            android:hint="0.00 zł"
            android:inputType="date" />

        <TextView
            android:id="@+id/add_refuel_date_label"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnWeight="3"
            android:layout_marginLeft="6dp"
            android:text="@string/date" />

        <EditText
            android:id="@+id/add_refuel_date_value"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:focusable="false" />
    </GridLayout>

</android.support.v7.widget.CardView>